# sence_paper

./: AUTHORS  Dockerfile  LICENSE  Local Changelog.txt  NOTICE  QuadCanineWalkWIP.txt  QuadHexaTriFlatWIP.txt  QuadHexaTriWIP.txt  README.md  dockerfile.dev  sence_comb_pybullet.py  sence_rtb.py  sence_server.py
.devcontainer/: Dockerfile  devcontainer.json
my_robot_hardware_tutorial/: my_robot_control.launch
my_robot_hardware_tutorial/config/: controllers.yaml  joint_limits.yaml
my_robot_hardware_tutorial/include/: my_robot_hardware_interface.h
my_robot_hardware_tutorial/src/: my_robot_hardware_interface.cpp
py_pub/: package.xml  setup.py
py_pub/py_pub/: blocky_pub.py  sence_pub.py
sence_com/: CMakeLists.txt  package.xml
sence_com/include/: Configuration.h  serial_functions.cpp  serial_functions.h
sence_com/launch/: run_serial.launch
sence_com/pysrc/: hexatrigaittall.py  hexatrigaitwide.py  quadrupedcanine.py  quadrupedreverseknees.py  quadrupedsitonbacklegs.py  quadtohex.py  standup.py
sence_com/src/: serial_port_comms.cpp
sence_controllers/: CMakeLists.txt  package.xml
sence_controllers/action/: StaticPose.action
sence_controllers/config/: controllers.yaml  leg_controllers.yaml  static.pose.yaml  tripod.gait.yaml
sence_controllers/launch/: leg_controllers.launch  sence_controllers.launch  static_pose_server.launch  syropod.launch
sence_controllers/scripts/: static_cartesian_server.py  static_pose_server.py
sence_deployment/: CMakeLists.txt  package.xml
sence_description/: CMakeLists.txt  package.xml
sence_description/launch/: display.launch  display.launch.py  robot.launch  sence.launch.py  sence.rviz  sence_gazebo.launch.py
sence_description/meshes/: HMMR_Leg_J2_v1_1.stl  HMMR_Leg_J3_v1_1.stl  HMMR_Leg_J4_1.stl  elbow.dae  elbow.stl  shoulder.dae  shoulder.stl  upper_shoulder.dae  upper_shoulder.stl  wrist.dae  wrist.stl
sence_description/meshes/hires/: sence_arm_link3.stl
sence_description/meshes/lores/: sence_arm_link0.stl  sence_arm_link1.stl  sence_arm_link2.stl  sence_arm_link3.stl  sence_chassis.stl
sence_description/quad_meshes/: base_link.stl  chassis.stl
sence_description/rviz/: urdf.rviz
sence_description/urdf/: brick.urdf  leg.urdf.xacro  main.urdf.xacro  sence.material.xacro  sence.ros2_control.xacro  sence.ros2_control_gazebo.xacro  sence.urdf.xacro  sence_display.urdf.xacro  sence_gazebo.urdf.xacro  sence_robot.urdf.xacro
sence_description/urdf/accessories/: inertia_package.urdf.xacro  range_package.urdf.xacro  vision_package.urdf.xacro
sence_description/urdf/assemblies/: arm.urdf.xacro
sence_description/urdf/common/: geometry.urdf.xacro  materials.urdf.xacro  math.urdf.xacro  plugins.urdf.xacro
sence_description/urdf/parts/: body.urdf.xacro  elbow.urdf.xacro  mx-28r.urdf.xacro  shoulder.urdf.xacro  wrist.urdf.xacro
sence_description/urdf/quad/: leg.urdf.xacro  main.urdf.xacro  test_sence.urdf.xacro
sence_gazebo/: CMakeLists.txt  package.xml
sence_gazebo/launch/: leg_gazebo.launch  sence_gazebo.launch  sence_gazebo.launch.py
sence_gazebo/urdf/: sence.ros2_control_gazebo.xacro  sence_gazebo.urdf.xacro
sence_gazebo/worlds/: empty1.sdf  test_world.sdf
sence_hardware/: .clang-format  CMakeLists.txt  package.xml
sence_hardware/config/: controllers.yaml  sence.yaml
sence_hardware/include/sence_hardware/: joint.hpp  sence_hardware_interface.hpp
sence_hardware/launch/: gazebo.launch  sence_hardware.launch  sence_hardware.launch.py
sence_hardware/rqt/: rqt_standup_pub.perspective
sence_hardware/rviz/: urdf.rviz
sence_hardware/scripts/: onetalker.py  zerotalker.py
sence_hardware/src/: sence_hardware_interface.cpp  sence_hardware_interface_node.cpp  sence_hardware_node.cpp  sence_interface.cpp  sence_interface_2.cpp
sence_hardware/urdf/: sence.ros2_control.xacro  sence_hardware.urdf.xacro
sence_hardware_ben/: CMakeLists.txt  package.xml
sence_hardware_ben/src/: sence_hw.cpp
sence_leg_description/: CMakeLists.txt  package.xml
sence_leg_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
sence_leg_description/meshes/: HMMR_Leg_J2_v1_1.stl  HMMR_Leg_J3_v1_1.stl  HMMR_Leg_J4_1.stl  HMMR_Leg_J4_v1_1.stl  base_link.stl
sence_leg_description/urdf/: materials.xacro  sence_leg.gazebo  sence_leg.trans  sence_leg.xacro  sence_leg_macro.xacro
sence_main_description/: CMakeLists.txt  package.xml
sence_main_description/launch/: controller.launch  display.launch  display_comb.launch  gazebo.launch  robot.launch
sence_main_description/meshes/: base_link.stl
sence_main_description/urdf/: materials.xacro  sence_comb.urdf  sence_comb.xacro  sence_main.gazebo  sence_main.trans  sence_main.xacro
sence_msgs/: CMakeLists.txt  package.xml
sence_msgs/action/: PoseSequence.action  StaticPose.action
sence_msgs/msg/: Dynamixel.msg  Leg.msg  SENCE.msg  Target.msg  Target_Buffer.msg
sence_paper/: CMakeLists.txt  package.xml  readme.md
sence_poser/: README.md  package.xml  setup.cfg  setup.py
sence_poser/sence_poser/: action_menu.py  chat_client.py  command_menu.py  command_sub.py  nu_menu.py  sence_poses.py  send_goal_demo.py  sequence_action_server.py  test_async_client.py  trajectory_pub.py
sence_robot/: CMakeLists.txt  package.xml
