<?xml version="1.0"?>
<package format="2">
  <name>sence_controllers</name>
  <version>0.0.1</version>
  <description>The sence_controllers package</description>

  <maintainer email="mik-p@github.com">mik-p</maintainer>

  <license>MIT</license>

  <author email="mik-p@github.com">mik-p</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>sence_description</exec_depend>
  <exec_depend>sence_hardware</exec_depend>

  <export>
  </export>
</package>
