
<?xml version="1.0"?>
<package format="2">
  <name>sence_deployment</name>
  <version>0.0.0</version>
  <description>The sence_deployment package</description>

  <maintainer email="mik-p@github.com">mik-p</maintainer>

  <license>MIT</license>

  <author email="mik-p@github.com">mik-p</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>sence_com</exec_depend>
  <exec_depend>sence_leg_description</exec_depend>
  <exec_depend>sence_main_description</exec_depend>
  <exec_depend>sence_msgs</exec_depend>
  <exec_depend>sence_paper</exec_depend>
  <exec_depend>sence_hardware</exec_depend>
  <exec_depend>sence_controllers</exec_depend>

  <export>
  </export>
</package>
