<?xml version="1.0"?>
<package format="2">

  <name>sence_hardware</name>
  <version>0.0.1</version>
  <description>
    The sence_hardware package.
    
    This is a clone/rewrite for testing purposes.
  </description>

  <maintainer email="u3243222@uni.canberra.edu.au">Ben Worth</maintainer>

  <license>todo</license>

  <author email="u3243222@uni.canberra.edu.au">Ben Worth</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>dynamixel_sdk</depend>

</package>
