<?xml version="1.0"?>
<package format="2">
  <name>sence_hardware</name>
  <version>0.0.1</version>
  <description>The sence_hardware package</description>

  <maintainer email="u3243222@uni.canberra.edu.au">bc</maintainer>

  <license>todo</license>

  <author email="u3243222@uni.canberra.edu.au">bc</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>dynamixel_sdk</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
