<?xml version="1.0"?>
<package format="2">
  <name>sence_leg_description</name>
  <version>0.0.0</version>
<description>The sence_leg_description package</description>

  <maintainer email="mik-p@github.com">mik-p</maintainer>

  <license>MIT</license>

  <author email="fusion2urdf@prosystem24.de">Spacemaster85</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>

  <export>
  </export>
</package>
