<?xml version="1.0"?>
<package format="2">
  <name>sence_main_description</name>
  <version>0.0.0</version>
<description>The sence_main_description package</description>

  <maintainer email="mik-p@github.com">mik-p</maintainer>

  <license>MIT</license>

  <author email="syuntoku14@todo.todo">syuntoku14</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>

  <export>
  </export>
</package>
