<?xml version="1.0"?>
<package format="2">
  <name>sence_paper</name>
  <version>0.0.0</version>
  <description>The sence_paper archive package</description>

  <maintainer email="mik-p@github.com">mik-p</maintainer>

  <license>MIT</license>

  <author email="mik-p@github.com">mik-p</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>

  <export>
  </export>
</package>
