<?xml version="1.0"?>
<package format="2">
  <name>sence_robot</name>
  <version>0.0.0</version>
  <description>The sence_robot meta package</description>

  <maintainer email="mik-p@github.com">mik-p</maintainer>

  <license>MIT</license>

  <author email="mik-p@github.com">mik-p</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>sence_description</exec_depend>
  <exec_depend>sence_msgs</exec_depend>
  <exec_depend>sence_paper</exec_depend>
  <exec_depend>sence_hardware</exec_depend>
  <exec_depend>sence_controllers</exec_depend>
  <exec_depend>sence_deployment</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
